- switched to Boolean.FALSE and Boolean.TRUE rather than useless constructing new objects. - switched internally to generic list.